# muse-vtuber

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: p2l-integration-requests.md
docs/research/: 2026-03-30-vts-default-parameters.md  2026-03-31-live2d-web-rendering.md
docs/superpowers/specs/: 2026-03-31-setup-ui-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: BiasControls.tsx  ConnectionStatus.tsx  Live2DAvatar.tsx  SensitivityControls.tsx  SettleOverlay.tsx  SignalQuality.tsx
frontend/src/hooks/: useMuseStream.ts
scripts/: test_vmc_visual.py  test_vts_visual.py
src/muse_vtuber/: __init__.py  config.py  head_pose.py  main.py  one_euro.py  server.py  source.py
src/muse_vtuber/mlp/: infer.py  model.py
src/muse_vtuber/outputs/: face_params.py  face_tracking.py  obs.py  vmc.py  vts.py
src/muse_vtuber/pipeline/: band_power.py  base.py  blink.py  clench.py  focus.py  signal_quality.py  speech.py  types.py
tests/: test_band_power.py  test_blink.py  test_clench.py  test_config.py  test_focus.py  test_head_pose.py  test_head_tracking_integration.py  test_one_euro.py  test_pipeline_base.py  test_server.py  test_signal_quality.py  test_source.py  test_speech.py  test_vmc_output.py  test_vts.py
