[project]
name = "muse-vtuber"
version = "0.1.0"
description = "Bridge BCI hardware to VTuber avatar software via VMC, OSC, and VTube Studio"
requires-python = ">=3.11"
dependencies = [
    "brainflow>=5.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "python-osc>=1.8",
    "websockets>=12.0",
    "pyvts>=0.3.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
muse-vtuber = "muse_vtuber.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/muse_vtuber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
